<?xml version="1.0"?>
<package>
  <name>mopomdp_gazebo</name>
  <version>0.1.0</version>
  <description>MO-POMDP Gazebo Simulation environment</description>

  <maintainer email="hend.altair@kustar.ac.ae">Hend Altair</maintainer>
  <author email="hend.altair@kustar.ac.ae">Hend Altair</author>

  
  <license>LGPL v3.0</license>

  <url type="website">https://github.com/kuri-kustar/mopomdp_sim</url>
  <url type="bugtracker">https://github.com/kuri-kustar/mopomdp_sim</url>
  <url type="repository">https://github.com/kuri-kustar/mopomdp_sim</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>husky_control</run_depend>
  <run_depend>husky_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
  </export>
</package>
