<?xml version="1.0"?>
<package>
  <name>mopomdp_sim</name>
  <version>0.1.0</version>
  <description>Metapackage for MO-POMDP simulation environment</description>

  <maintainer email="hend.altair@kustar.ac.ae">Hend Altair</maintainer>

  <license>LGPL v3.0</license>

  <url type="website">https://github.com/kuri-kustar/mopomdp_sim</url>
  <url type="bugtracker">https://github.com/kuri-kustar/mopomdp_sim</url>
  <url type="repository">https://github.com/kuri-kustar/mopomdp_sim</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>husky_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
